# SUSTech_CS323_Project_Incredibuild

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: test.yml
docs/: syntax.txt
src/: main.rs
src/analyser/: Cargo.toml
src/analyser/src/: error.rs  fmt.rs  from.rs  impls.rs  lib.rs  manager.rs  scope.rs  stack.rs  symbol.rs  table.rs  typer.rs  utils.rs  walker.rs
src/ast/: Cargo.toml
src/ast/src/: ast.rs  fmt.rs  lib.rs  tree.rs
src/irgen/: Cargo.toml  a.out
src/irgen/src/: azuki.rs  emit.rs  lib.rs
src/lexer/: Cargo.toml
src/lexer/src/: lex.l  lexer.rs  lib.rs  tokens.rs
src/parser/: Cargo.toml  build.rs
src/parser/src/: ast.rs  calculator.lalrpop  error.rs  fmt.rs  grammar.lalrpop  lib.rs  main.rs
src/test/: test  test.rs  test.spl  test_0_r00.out  test_0_r00.spl  test_lexer.rs
src/test/phase1/: test_1_r01.out  test_1_r02.out  test_1_r03.out  test_1_r04.out  test_1_r05.out  test_1_r06.out  test_1_r07.out  test_1_r08.out  test_1_r09.out  test_1_r10.out  test_1_r11.out  test_1_r11.spl  test_1_r12.out  test_1_r12.spl  test_1_s03.out  test_1_s04.out  test_1_s06.out
src/test/phase2/: self_def_s01.spl  self_def_s02.out  (+18 more)
test/: test_0_r00.ll  test_0_r00.out  test_0_r00.spl
test/final/: fibonacci.spl
test/mid/: test_semantic_1.spl
test/phase2/: self_def_s01.out  self_def_s04.out  self_def_s04.spl  self_def_s05.spl  test_2_r01.out  test_2_r04.out  test_2_r06.spl  test_2_r07.out  test_2_r09.out  test_2_r13.out  test_2_r15.out
test/phase3/: self_def_s01.ll  self_def_s01.spl  self_def_s02.ll  self_def_s02.spl  test_3_r01.ll  test_3_r01.spl  test_3_r02.ll  test_3_r02.spl  test_3_r03.ll  test_3_r03.spl  test_3_r04.ll  test_3_r04.spl  test_3_r05.ll  test_3_r05.spl  test_3_r06.ll  test_3_r06.spl
test/phase4/: test_4_r01.spl  test_4_r02.spl  test_4_r03.spl  test_4_r04.spl
(+28 files in other folders)
