[package]
name = "incredibuild"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/ast",
    "src/lexer",
    "src/parser",
    "src/ast",
    "src/analyser"
]

[dependencies]
clap = "4.5.22"
llvm-ir = { version = "0.11.1", features = ["llvm-17"] }
spl_parser = { path = "src/parser" }