[package]
name = "incredibuild"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/ast",
    "src/lexer",
    "src/parser",
    "src/ast",
    "src/analyser",
    "src/irgen"
]

[dependencies]
clap = "4.5.22"
colored = "2.1.0"
spl_parser = { path = "src/parser" }
spl_analyser = { path = "src/analyser" }
spl_irgen = { path = "src/irgen" }