[package]
name = "spl_parser"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"

[dependencies]
spl_lexer = {version = "0.0.1", path = "../lexer"}
spl_ast = {version = "0.0.1", path = "../ast"}
lalrpop-util = { version = "0.21.0", features = ["unicode"] }

[build-dependencies]
lalrpop = { version = "0.22.0", default-features = false }
